--- a/k8s-ingress.yaml
+++ b/k8s-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: portfolio-ingress
   annotations:
     # If using a specific Ingress Controller (e.g., nginx, traefik)
-    kubernetes.io/ingress.class: "nginx"
+    spec.ingressClassName: "nginx"
 spec:
   rules:
   - host: "kaneki.art"           # Your domain here
